  This can be shown/hidden by clicking "Toggle Editor" in the "My Scores" menu
  or by pressing CTRL+E. When the editor is displayed, you can add a new score
  by clicking the "New" button on the editor panel. You can specify the song
  via the auto-completing text field without having to navigate to the song
  in the tree view of the scores.
- Scores with image/video URLs are now distinguished by blue, underlined
  text and/or a camera icon. Clicking on the score will launch an external browser
  to the video URL, if present, or the image URL (clicking on a new score will
  NOT launch a browser so that you can still quickly edit the score).
- Fixed an error that sometimes caused a NonUniqueResultException to occur while
  trying to download scores from ScoreHero.
- The login dialog has been changed in order to fix an issue that caused JSHManager
  to hang after logging in to ScoreHero on Linux systems.
- Added new menus similar to rckr's YUI menus (thanks) to quickly open ScoreHero
  in your browser.

Version 0.0.3
-------------
- Selected rows can now be expanded/collapsed via the right/left arrow keys
- Table cells for new scores can be edited simply by beginning to type if
  the cell is selected (has a dashed border around it). You can change the
  selected cell with the arrow keys. Note there is still an issue when
  editing the Comment cell causing text to be appended instead of replaced.
- Hit percentages are now orange between 80 and 99% and red when < 80%
  (same as on ScoreHero)
- Song data is now downloaded automatically the first time you try to
  download scores for a particular game/difficulty. This means it is no
  longer required to manually download song data unless new DLC comes out.

Version 0.0.2
-------------
- Fixed downloading scores for GH1/80s/OT (games that are only on one system)
- Scores are now sorted descending by points

Version 0.0.1
-------------
- Initial release